--- a/app.json
+++ b/app.json
@@ -2,10 +2,9 @@
   "expo": {
     "name": "savepass",
     "slug": "savepass",
+    "schema": "savepass",
     "version": "1.0.0",
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "icon": "./assets/images/icon.png",
     "splash": {
       "image": "./assets/images/splash.png",
